--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                 </div>
                 <div class="col-6 mx-auto">
                     <ul class="list-group">
-                        <li v-for="task in tasks" class="d-flex justify-content-between list-group-item">{{task.text}}
-                            <button type="button" class="btn-close" aria-label="Close"></button>
+                        <li v-for="(task, index) in tasks" class="d-flex justify-content-between list-group-item">
+                            {{task.text}}
+                            <button type="button" class="btn-close" aria-label="Close"
+                                @click="removeTask(index)"></button>
                         </li>
                     </ul>
                 </div>
