--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css'
         integrity='sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=='
         crossorigin='anonymous' />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="./style.css" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 
@@ -26,7 +26,7 @@
                 <div class="col-6 mx-auto">
                     <ul class="list-group">
                         <li v-for="(task, index) in tasks" class="d-flex justify-content-between list-group-item">
-                            {{task.text}}
+                            <span class="delate">{{task.text}}</span>
                             <button type="button" class="btn-close" aria-label="Close"
                                 @click="removeTask(index)"></button>
                         </li>
